--- a/css/offers.css
+++ b/css/offers.css
@@ -13,7 +13,7 @@ body{
   width: 100%;
   top: 0px;
   z-index: 99!important;
-  background: #333;
+  background: #111;
   position: fixed;
 }
 
@@ -58,7 +58,6 @@ body{
   display: none;
 }
 
-
 #hiddenbtn{
   width: 50%;
   height: 100vh;
@@ -95,12 +94,11 @@ body{
     position: absolute;
     display: inline-block;
     width: 220px;
-    background-color: #333;
     height: 0px;
     overflow-y: hidden;
     top: 60px;
     right: 0px;
-    background: #333;
+    background: #111;
     transition: 0.75s ease;
   }
 
@@ -141,9 +139,6 @@ body{
   text-decoration: underline #DC171D dashed;
 }
 
-#main_sect .container img{
-  width: 60vh;
-}
 
 #main_sect .container p{
   color: #fff;
@@ -159,6 +154,7 @@ body{
   border-radius: 26px;
   color: #fff;
   font-size: 18px;
+  margin-top: 100px;
 }
 
 #main_sect .container .btn:hover{
@@ -170,6 +166,9 @@ body{
   margin-top: 60px;
   border-top: 1px solid #333;
   bottom: 0;
+  left: 0;
+  right: 0;
+  position: absolute;
 }
 
 #footer .container h6{
