--- a/css/about_BOT.css
+++ b/css/about_BOT.css
@@ -13,7 +13,7 @@ body{
   width: 100%;
   top: 0px;
   z-index: 99!important;
-  background: #333;
+  background: #111;
   position: fixed;
 }
 
@@ -58,7 +58,6 @@ body{
   display: none;
 }
 
-
 #hiddenbtn{
   width: 50%;
   height: 100vh;
@@ -95,12 +94,11 @@ body{
     position: absolute;
     display: inline-block;
     width: 220px;
-    background-color: #333;
     height: 0px;
     overflow-y: hidden;
     top: 60px;
     right: 0px;
-    background: #333;
+    background: #111;
     transition: 0.75s ease;
   }
 
@@ -141,16 +139,24 @@ body{
   text-decoration: underline #DC171D dashed;
 }
 
-#main_sect .container img{
-  width: 60vh;
-}
 
 #main_sect .container p{
   color: #fff;
-  text-align: center;
-  margin-bottom: 50px;
+  text-align: left;
   margin-top: 50px;
   font-size: 20px;
+}
+
+#main_sect .container ul{
+  color: #fff;
+  text-align: left;
+  font-size: 20px;
+  margin-bottom: 50px;
+}
+
+#main_sect .container ul li span{
+  color: #DC171D;
+  font-weight: 700;
 }
 
 #main_sect .container .btn{
@@ -170,6 +176,9 @@ body{
   margin-top: 60px;
   border-top: 1px solid #333;
   bottom: 0;
+  left: 0;
+  right: 0;
+  position: relative;
 }
 
 #footer .container h6{
