--- a/css/our_team.css
+++ b/css/our_team.css
@@ -3,6 +3,7 @@
   margin: 0;
   text-decoration: none;
 }
+
 body{
   background: #000 !important;
 }
@@ -13,7 +14,7 @@ body{
   width: 100%;
   top: 0px;
   z-index: 99!important;
-  background: #333;
+  background: #111;
   position: fixed;
 }
 
@@ -58,7 +59,6 @@ body{
   display: none;
 }
 
-
 #hiddenbtn{
   width: 50%;
   height: 100vh;
@@ -95,12 +95,11 @@ body{
     position: absolute;
     display: inline-block;
     width: 220px;
-    background-color: #333;
     height: 0px;
     overflow-y: hidden;
     top: 60px;
     right: 0px;
-    background: #333;
+    background: #111;
     transition: 0.75s ease;
   }
 
@@ -141,35 +140,116 @@ body{
   text-decoration: underline #DC171D dashed;
 }
 
-#main_sect .container img{
-  width: 60vh;
+:root{
+  --background-dark: #000;
+  --text-light: rgba(255,255,255,0.6);
+  --text-lighter: rgba(255,255,255,0.9);
+  --spacing-s: 8px;
+  --spacing-m: 16px;
+  --spacing-l: 24px;
+  --spacing-xl: 32px;
+  --spacing-xxl: 64px;
+  --width-container: 1200px;
 }
 
-#main_sect .container p{
-  color: #fff;
-  text-align: center;
-  margin-bottom: 50px;
-  margin-top: 50px;
-  font-size: 20px;
+.hero-section{
+  align-items: flex-start;
+  background-image: linear-gradient(15deg, #000 0%, #000 150%);
+  display: flex;
+  min-height: 100%;
+  justify-content: center;
+  padding: var(--spacing-xxl) var(--spacing-l);
 }
 
-#main_sect .container .btn{
-  background: #DC171D;
-  padding: 15px;
-  border-radius: 26px;
-  color: #fff;
-  font-size: 18px;
+.card-grid{
+  display: grid;
+  grid-template-columns: repeat(1, 1fr);
+  grid-column-gap: var(--spacing-l);
+  grid-row-gap: var(--spacing-l);
+  max-width: var(--width-container);
+  width: 100%;
 }
 
-#main_sect .container .btn:hover{
-  background: #fff;
-  color: #DC171D;
+@media(min-width: 540px){
+  .card-grid{
+    grid-template-columns: repeat(2, 1fr); 
+  }
 }
+
+@media(min-width: 960px){
+  .card-grid{
+    grid-template-columns: repeat(4, 1fr); 
+  }
+}
+
+.card{
+  list-style: none;
+  position: relative;
+  background-color: #222!important;
+}
+
+.card:before{
+  content: '';
+  display: block;
+  padding-bottom: 150%;
+  width: 100%;
+}
+
+.card__background{
+  background-size: cover;
+  background-position: center;
+  border-radius: var(--spacing-l);
+  bottom: 0;
+  filter: brightness(0.75) saturate(1.2) contrast(0.85);
+  left: 0;
+  position: absolute;
+  right: 0;
+  top: 0;
+  transform-origin: center;
+  trsnsform: scale(1) translateZ(0);
+  transition: 
+    filter 200ms linear,
+    transform 200ms linear;
+}
+
+.card:hover .card__background{
+  transform: scale(1.05) translateZ(0);
+}
+
+.card-grid:hover > .card:not(:hover) .card__background{
+  filter: brightness(0.5) saturate(0) contrast(1.2) blur(20px);
+}
+
+.card__content{
+  left: 0;
+  padding: var(--spacing-l);
+  position: absolute;
+  top: 0;
+}
+
+.card__category{
+  color: var(--text-light);
+  font-size: 0.9rem;
+  margin-bottom: var(--spacing-s);
+  text-transform: uppercase;
+}
+
+.card__heading{
+  color: var(--text-lighter);
+  font-size: 1.9rem;
+  text-shadow: 2px 2px 20px rgba(0,0,0,0.2);
+  line-height: 1.4;
+  word-spacing: 100vw;
+}
+
 
 #footer{
   margin-top: 60px;
   border-top: 1px solid #333;
   bottom: 0;
+  left: 0;
+  right: 0;
+  position: relative;
 }
 
 #footer .container h6{
