--- a/css/index.css
+++ b/css/index.css
@@ -69,7 +69,7 @@ body{
   opacity: 0;
 }
 
-@media (max-width:900px) {
+@media (max-width:920px) {
   .nav .nav-btn {
     display: inline-block;
     position: absolute;
@@ -142,9 +142,13 @@ body{
 }
 
 #main_sect .container img{
-  width: 85vw;
+  width: 50vw;
 }
-
+@media (max-width:700px){
+  #main_sect .container img{
+    width: 75vw;
+  }
+}
 #main_sect .container p{
   color: #fff;
   text-align: center;
