--- a/css/index.css
+++ b/css/index.css
@@ -174,6 +174,9 @@ body{
   margin-top: 60px;
   border-top: 1px solid #333;
   bottom: 0;
+  left: 0;
+  right: 0;
+  position: relative;
 }
 
 #footer .container h6{
