--- a/css/our_team.css
+++ b/css/our_team.css
@@ -49,7 +49,7 @@ body{
 
 .nav .nav-links a:hover {
   border-radius: 8px;
-  color: #DC171D;
+  color: #7f0000;
   box-shadow: 0 0 8px #fff,
               0 0 8px #fff;
 
@@ -89,7 +89,7 @@ body{
     display: block;
     width: 32px;
     height: 12px;
-    border-top: 2.5px solid #DC171D;
+    border-top: 2.5px solid #7f0000;
   }
   .nav .nav-links {
     position: absolute;
@@ -137,7 +137,7 @@ body{
   margin-bottom: 50px;
   font-size: 60px;
   font-weight: 900;
-  text-decoration: underline #DC171D dashed;
+  text-decoration: underline #7f0000 dashed;
 }
 
 :root{
