--- a/css/index.css
+++ b/css/index.css
@@ -2,6 +2,7 @@
   padding: 0;
   margin: 0;
   text-decoration: none;
+  box-sizing: border-box;
 }
 body{
   background: #000 !important;
@@ -13,7 +14,7 @@ body{
   width: 100%;
   top: 0px;
   z-index: 99!important;
-  background: #333;
+  background: #111;
   position: fixed;
 }
 
@@ -51,7 +52,10 @@ body{
   color: #7f0000;
   box-shadow: 0 0 8px #fff,
               0 0 8px #fff;
+}
 
+.nav .nav-links .active{
+  color: #7f0000;
 }
 
 .nav #nav-check {
@@ -69,7 +73,7 @@ body{
   opacity: 0;
 }
 
-@media (max-width:920px) {
+@media (max-width:1100px) {
   .nav .nav-btn {
     display: inline-block;
     position: absolute;
@@ -124,11 +128,41 @@ body{
   }
 }
 
+.nav #profile a{
+  padding: 8px 15px;
+  text-decoration: none;
+  text-transform: uppercase;
+  color: #fff;
+  display: inline-block;
+  vertical-align: middle;
+  font-size: 25px;
+  font-weight: 700;
+  background: #222;
+  border-radius: 10px;
+  line-height: 35px;
+  margin: 5px 15px 5px 0;
+}
+
+.nav #profile a:hover{
+  border-radius: 8px;
+  color: #7f0000;
+  box-shadow: 0 0 8px #fff,
+              0 0 8px #fff;
+}
+
+@media (max-width:1100px){
+  .nav #profile{
+    position: absolute;
+    right: 50px;
+  }
+}
+
 
 /*----------------------------------------Landing page---------------------------------------------*/
 
 #main_sect{
   margin-top: 100px;
+  overflow: hidden;
 }
 
 #main_sect .container h1{
@@ -143,6 +177,7 @@ body{
 
 #main_sect .container img{
   width: 50vw;
+  margin-bottom: 35px;
 }
 @media (max-width:700px){
   #main_sect .container img{
@@ -174,14 +209,10 @@ body{
     transform: translate3d(-100%, 0, 0);
   }
 }
-.ticker-container{
-  width: 100vw;
-}
+
 .ticker-wrap {
-  
   position: relative;
   width: 100%;
-  left: 0!important;
   overflow: hidden;
   height: 3rem;
   background-color: rgba(10,10,10, 0.9); 
@@ -193,7 +224,7 @@ body{
 
     display: inline-block;
     height: 3rem;
-    left: 0;
+    overflow: hidden;
     line-height: 3rem;
     white-space: nowrap;
     padding-right: 100%;
@@ -205,18 +236,28 @@ body{
             animation-timing-function: linear;
    -webkit-animation-name: ticker;
            animation-name: ticker;
-    -webkit-animation-duration: 15s;
-            animation-duration: 15s;
+    -webkit-animation-duration: 50s;
+            animation-duration: 50s;
   }
-.ticker__item p{
+
+  @media (max-width:700px){
+  .ticker {
+    -webkit-animation-duration: 40s;
+            animation-duration: 40s;
+  }
+}
+
+.ticker__item{
     display: inline-block;
     padding: 0 2rem;
     font-size: 1.5rem;
     color: #fff;
+    overflow: hidden;
+    font-family: 'Kalam';
   }
 
 .map{
-  margin-top: 20px;
+  margin-top: 70px;
 }
 #main_sect .container .btn{
   background: #7f0000;
